# aitomobile

./: App.tsx  LICENSE  README.md  app.json  package.json
backend/: main.py  pyproject.toml
